--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=backend
 
 # git
-spring.profiles.include=db
+spring.profiles.include=db,oauth
 
 # strategy of ddl (create, update, create-drop, validate)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.time-zone=Asia/Seoul
