feat: kafka, redis 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
 
 # git
-spring.profiles.include=db,oauth
+spring.profiles.include=db,jwt,kafka
 
 # strategy of ddl (create, update, create-drop, validate)
 spring.jpa.hibernate.ddl-auto=update
