--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ out/
 .vscode/
 
 application-db.properties
-application-oauth.properties
+application-jwt.properties
+application-kafka.properties
