hotfix: action 설정 변경

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
             chmod +x ./gradlew
             
             # 5. nginx 권한 확보
-            chmod +x -H nginx
+            chmod -R +x nginx
 
             # 5. 빌드
             ./gradlew clean build
