--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
             chmod +x ./gradlew
             
             # 5. nginx 권한 확보
-            chmod -R 777 nginx
+            sudo chmod -R 755 nginx
 
             # 5. 빌드
             ./gradlew clean build
